src/components/message/styles.module.scss
.messageComponent {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: var(--margin-mini);

  .messageHeader {
    display: flex;
    align-items: center;
    gap: var(--margin-mini);

    p.date {
      color: var(--text-muted);
      font-size: 1rem;
    }
  }

  .messageContent {
    background-color: var(--bg-light);
    width: max-content;
    padding: var(--margin-sm);
    border-radius: var(--margin-sm);
  }

  h3,
  p {
    color: var(--text);
  }

  p {
    font-size: 1.2rem;
  }
}

.aiMessage {
  width: 100%;
  align-items: flex-start;
  .messageContent{
  background-color: var(--info);
  h3{
    color: var(--bg-dark);
  }
}
}

